--- a/package.json
+++ b/package.json
@@ -3,12 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@mobiscroll/react-lite": "^4.10.6",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.19.2",
+    "bootstrap": "^4.5.0",
+    "mobiscroll": "^3.0.0-beta6",
+    "moment": "^2.27.0",
+    "muicss": "^0.10.2",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.2.2",
+    "react-datepicker": "^3.1.3",
+    "react-dates": "^21.8.0",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-hook-form": "^6.0.8",
+    "react-mdl": "^2.1.0",
+    "react-modal": "^3.11.2",
+    "react-parallax": "^3.0.3",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1",
+    "react-time-picker": "^4.0.1",
+    "react-typical": "^0.1.3",
+    "semantic-ui-react": "^1.0.0",
+    "typical": "^6.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
